--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -136,7 +136,7 @@ post_meta:
   # Home Page
   page:
     # Choose: created / updated / both
-    date_type: created
+    date_type: both
     # Choose: date / relative
     date_format: date
     categories: true
@@ -760,7 +760,7 @@ site_verification:
 
 theme_color:
   enable: true
-  main: orange
+  main: 
   paginator: "#00c4b6"
   button_hover: "#FF7242"
   text_selection: "#00c4b6"
@@ -1051,7 +1051,7 @@ inject:
   head:
       - <link rel="stylesheet" href="/css/mbg.css?v=2">
   bottom:
-      - <script defer src="/js/mbg.js?v1"></script>
+      - <script defer data-pjex src="/js/mbg.js?v=1"></script>
       - <script src="/js/webpushr-sw.js?v=2"></script>
       - <script>（function（w，d， s， id） {if（typeof（w.webpushr）！=='undefined'） return;w.webpushr=w.webpushr||function（）{（w.webpushr.q=w.webpushr.q||[]）.push（参数）};var js， fjs = d.getElementsByTagName（s）[0];js = d.createElement（s）;js.id = id;js.async=1;js.src = “https://cdn.webpushr.com/app.min.js”;} fjs.parentNode.appendChild（js）;（window，document， 'script'， 'webpushr-jssdk'））;webpushr（'设置'，{'key'：'BJNGWXPB2ZzwJMvqv_rNqMl-Prl6AMj93NePtdH4sb5nNfw_wM5nD46cQyxC1QIdSSuUG1YnwRLnK4IbmFF7VP4' }）;</script> 
     #  - <script src="https://tc.qdqqd.com/oTEaFo.js" data-pjax="" defer=""></script>
